[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/ai_diagram/editor/graphnode/gn_sub_param.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/ai_diagram/editor/graphnode/gn_set_value.gd" type="Script" id=2]

[node name="gn_set_value" type="GraphNode"]
margin_right = 32.0
margin_bottom = 30.0
title = "Set Value"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color( 1, 0, 0, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="le_var" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 210.0
margin_bottom = 48.0

[node name="gn_sub_param" parent="." instance=ExtResource( 1 )]
margin_left = 16.0
margin_top = 49.0
margin_right = 210.0
margin_bottom = 73.0

[connection signal="close_request" from="." to="." method="_on_gn_set_value_close_request"]
